--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -1,9 +1,9 @@
 #welcome-text {
-    font-size: 24;
+    font-size: 24px;
 }
 
 .section-heading {
-    font-size: 20;
+    font-size: 20px;
     font-weight: bold;
 }
 
